--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
         <h1 class="title">Harvard Art Museums</h1>
         <div id="all-galleries">
             <h2>Galleries</h2>
-            <ul id="galleries">
-            </ul>
+            <table id="galleries">
+            </table>
         </div>
         <div id="all-objects" style="display:none">
-            <h2>Objects: TODO</h2>
+            <h2>Objects</h2>
+            <button id="bbutton">Back</button>
+            <table id="objects">
+                
+            </table>
+        </div>
+        <div id="objectpage" style="display:none">
+
         </div>
     </body>
 </html>
